--- a/portfolio.html
+++ b/portfolio.html
@@ -209,7 +209,7 @@ Fixed Navigation
 										<a class="search-icon" href="./images/productos/portfolio-1.jpg" data-lightbox="image-1">
 											
 										</a>
-										<h4><a href="portfolio.html">One Block</a></h4>
+										<h4><a href="one_block.html">One Block</a></h4>
 									</div>
 								</div>
 							</div>
