--- a/one_block.html
+++ b/one_block.html
@@ -150,7 +150,7 @@ Fixed Navigation
                 <a href="index.html">Lavatorio</a>&nbsp;
               </li>
               <li class="list-inline-item">
-                <a href="single-post.html">9401 SKN</a>&nbsp;
+                <a href="single-post.html">3501 CRCR</a>&nbsp;
               </li>
               <!-- <li class="list-inline-item">
                 <a href="single-post.html">30 likes</a>
