--- a/Showrooms.html
+++ b/Showrooms.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
 
 <html lang="en">
 <head>
@@ -133,6 +127,28 @@ Welcome Slider
  			<div class="col-md-12">
  				<div class="block mt-4">
  					<h1 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Showroom<br>Palermo</h1>
+ 					<p class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">Compruebe el funcionamiento de nuestra innovadora gama de productos 
+						como si ya estuviesen instalados en su hogar o emprendimiento</p>
+ 					<ul class="list-inline wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".7s">
+ 						<li class="list-inline-item">
+ 							<a data-scroll href="#services" class="btn btn-main">Vista 360°</a>
+ 						</li>
+ 						<li class="list-inline-item">
+ 							<a data-scroll href="#team" class="btn btn-transparent">Saber Mas</a>
+ 						</li>
+ 					</ul>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</div>
+ </section>
+
+ <section class="hero-area">
+ 	<div class="container">
+ 		<div class="row">
+ 			<div class="col-md-12">
+ 				<div class="block mt-4">
+ 					<h1 class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">Showroom<br>San Fernando</h1>
  					<p class="wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">Compruebe el funcionamiento de nuestra innovadora gama de productos como si ya estuviesen instalados en su hogar o emprendimiento
  					</p>
  					<ul class="list-inline wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".7s">
@@ -148,6 +164,15 @@ Welcome Slider
  		</div>
  	</div>
  </section>
+
+
+ <!--================================
+=            Google Map            =
+=================================-->
+<div class="google-map">
+	<div id="map_canvas" class="map_canvas" data-latitude="40.712776" data-longitude="-74.005974" data-marker="images/marker.png" data-marker-name="Bingo"></div>
+</div>
+ <!--====  End of Google Map  ====-->
 
 <!--
 Start About Section
@@ -193,106 +218,7 @@ Start Call To Action
 		</div> 		<!-- End row -->
 	</div>   	<!-- End container -->
 </section>   <!-- End section -->
-<!-- Start Services Section
-==================================== -->
 
-<section class="services" id="services">
-	<div class="container">
-		<div class="row justify-content-center">
-			<!-- section title -->
-			<div class="col-xl-6 col-lg-8">
-				<div class="title text-center">
-					<h2></h2>
-					<p>
-						</p>
-					<div class="border"></div>
-				</div>
-			</div>
-			<!-- /section title -->
-		</div>
-		<div class="row no-gutters">
-
-			<!-- Single Service Item -->
-			<div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-				<div class="service-block p-4 color-bg text-center">
-					<div class="service-icon text-center">
-						<i class="tf-ion-ios-copy-outline"></i>
-					</div>
-					<h3>WordPress Theme</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
-				</div>
-			</div>
-			<!-- End Single Service Item -->
-
-			<!-- Single Service Item -->
-			<div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-				<div class="service-block p-4 text-center">
-					<div class="service-icon text-center">
-						<i class="tf-ion-ios-alarm-outline"></i>
-					</div>
-					<h3>Responsive Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
-				</div>
-			</div>
-			<!-- End Single Service Item -->
-
-			<!-- Single Service Item -->
-			<div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-				<div class="service-block p-4 color-bg text-center">
-					<div class="service-icon text-center">
-						<i class="tf-ion-ios-book-outline"></i>
-					</div>
-					<h3>Media &amp; Advertisement</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
-				</div>
-			</div>
-			<!-- End Single Service Item -->
-
-			<!-- Single Service Item -->
-			<div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-				<div class="service-block p-4  text-center">
-					<div class="service-icon text-center">
-						<i class="tf-ion-ios-briefcase-outline"></i>
-					</div>
-					<h3>Graphic Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
-				</div>
-			</div>
-			<!-- End Single Service Item -->
-
-			<!-- Single Service Item -->
-			<div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-				<div class="service-block p-4 color-bg text-center">
-					<div class="service-icon text-center">
-						<i class="tf-ion-ios-crop"></i>
-					</div>
-					<h3>Apps Development</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
-				</div>
-			</div>
-			<!-- End Single Service Item -->
-
-			<!-- Single Service Item -->
-			<div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-				<div class="service-block p-4 text-center">
-					<div class="service-icon text-center">
-						<i class="tf-ion-ios-home-outline"></i>
-					</div>
-					<h3>Networking</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
-				</div>
-			</div>
-			<!-- End Single Service Item -->
-
-		</div> <!-- End row -->
-	</div> <!-- End container -->
-</section> <!-- End section -->
 <!--
 Start Call To Action
 ==================================== -->
