--- a/raptor_Black.html
+++ b/raptor_Black.html
@@ -355,78 +355,47 @@ Fixed Navigation
 <!-- blog details part end -->
 
 
-<section id="gallery">
-  <div class="container">
-    <div id="image-gallery">
-      <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
-          <div class="img-wrapper">
-            <a href="https://unsplash.it/500"><img src="https://unsplash.it/500" class="img-responsive"></a>
-            <div class="img-overlay">
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
-          <div class="img-wrapper">
-            <a href="https://unsplash.it/600"><img src="https://unsplash.it/600" class="img-responsive"></a>
-            <div class="img-overlay">
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
-          <div class="img-wrapper">
-            <a href="https://unsplash.it/700"><img src="https://unsplash.it/700" class="img-responsive"></a>
-            <div class="img-overlay">
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
-          <div class="img-wrapper">
-            <a href="https://unsplash.it/800"><img src="https://unsplash.it/800" class="img-responsive"></a>
-            <div class="img-overlay">
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
-          <div class="img-wrapper">
-            <a href="https://unsplash.it/900"><img src="https://unsplash.it/900" class="img-responsive"></a>
-            <div class="img-overlay">
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
-          <div class="img-wrapper">
-            <a href="https://unsplash.it/1000"><img src="https://unsplash.it/1000" class="img-responsive"></a>
-            <div class="img-overlay">
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
-          <div class="img-wrapper">
-            <a href="https://unsplash.it/1100"><img src="https://unsplash.it/1100" class="img-responsive"></a>
-            <div class="img-overlay">
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 image">
-          <div class="img-wrapper">
-            <a href="https://unsplash.it/1200"><img src="https://unsplash.it/1200" class="img-responsive"></a>
-            <div class="img-overlay">
-              <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-      </div><!-- End row -->
-    </div><!-- End image gallery -->
-  </div><!-- End container --> 
-</section>
+<!-- Start Team Skills
+=========================================== -->
+<section class="team-skills section-sm" id="skills">
+	<div class="container">
+		<div class="row justify-content-center">
+			<!-- section title -->
+			<div class="col-xl-6 col-lg-0">
+				<div class="title text-center">
+					<h2>Ambientaciones</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus fugiat, vel veniam, eos et
+						delectus eveniet molestiae. Esse, voluptas ratione.</p>
+					<div class="border"></div>
+				</div>
+			</div>
+			<!-- /section title -->
+		</div>
+
+		<div class="row justify-content-between">
+
+			<div class="col-md-6">
+
+			</div>
+		</div> <!-- End row -->
+		<div class="row">
+			<div class="col-md-12 mt-4">
+				<div id="clients-slider" class="clients-logo-slider">
+					<img loading="lazy" src="./images/slider/acquerelli-gallery-04.2400x0.jpg" alt="">
+					<img loading="lazy" src="images/slider/acquerelli-gallery-01.2400x0.jpg" alt="">
+					<img loading="lazy" src="images/slider/match-gallery-02.2400x0.jpg" alt="">
+					<img loading="lazy" src="images/slider/match-gallery-03.2400x0.jpg" alt="">
+					<img loading="lazy" src="images/slider/flatoaltonegromod.jpg" alt="">
+					<img loading="lazy" src="images/slider/Flat alto.jpg" alt="">
+					<!-- <img loading="lazy" src="images/client-logo/logo-2.png" alt="">
+					<img loading="lazy" src="images/client-logo/logo-3.png" alt="">
+					<img loading="lazy" src="images/client-logo/logo-4.png" alt="">
+					<img loading="lazy" src="images/client-logo/logo-5.png" alt=""> -->
+				</div>
+			</div>
+		</div>
+	</div> <!-- End container -->
+</section> <!-- End section -->
 
 
 
