--- a/about.html
+++ b/about.html
@@ -182,6 +182,74 @@ Fixed Navigation
 	</div>
 </section>
 
+<!--
+Start Counter Section
+==================================== -->
+<section class="counter-wrapper section-sm">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-xl-6 col-lg-8 text-center">
+				<div class="title">
+					<h2>Award-Winning Agency</h2>
+					<p>Vestibulum nisl tortor, consectetur quis imperdiet bibendum, laoreet sed arcu. Sed condimentum iaculis ex, in faucibus lorem accumsan non. Donec mattis tincidunt metus. Morbi sed tortor a risus luctus dignissim.</p>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<!-- first count item -->
+			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
+				<div class="counters-item">
+					<!-- <i class="ion:business-outline"></i>
+					<ion-icon name="business-outline"></ion-icon> -->
+					<div>
+						<span class="counter" data-count="33">0</span>
+					</div>
+					<h3>Lineas de griferias</h3>
+				</div>
+			</div>
+			<!-- end first count item -->
+
+			<!-- second count item -->
+			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
+				<div class="counters-item">
+					<!-- <i class="tf-ion-ios-analytics-outline"></i> -->
+
+					<div>
+						<span class="counter" data-count="260">0</span>
+					</div>
+					<h3>obras completadas</h3>
+				</div>
+			</div>
+			<!-- end second count item -->
+
+			<!-- third count item -->
+			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
+				<div class="counters-item">
+					<!-- <i class="tf-ion-ios-compose-outline"></i> -->
+					<div>
+						<span class="counter" data-count="40">0</span>
+					</div>
+					<h3>Años en el mercado</h3>
+
+				</div>
+			</div>
+			<!-- end third count item -->
+
+			<!-- fourth count item -->
+			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
+				<div class="counters-item kill-border">
+					<!-- <i class="tf-ion-ios-bolt-outline"></i> -->
+					<div>
+						<span class="counter" data-count="100000">0</span>
+					</div>
+					<h3>Ventas</h3>
+				</div>
+			</div>
+			<!-- end fourth count item -->
+		</div> <!-- end row -->
+	</div> <!-- end container -->
+</section> <!-- end section -->
+
 
 
 
@@ -192,7 +260,7 @@ Start Call To Action
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a tempor eros. Pellentesque elementum nulla sed justo tempor posuere sit amet sit amet ligula.</h2>
+				<h2>Contamos con dos showroom's ubicados en capital federal y en gran buenos aires. Donde podes poner a prueba todos nuestros modelos de griferias para que no queden dudas al momento de colocarlas en nuesto hogar. </h2>
 			</div>
 		</div> 		<!-- End row -->
 	</div>   	<!-- End container -->
@@ -232,185 +300,8 @@ Start Call To Action
 	</div>
 </section> -->
 
-<!-- Start Our Team
-		=========================================== -->
-<section class="team" id="team">
-	<div class="container">
-		<div class="row justify-content-center">
-			<!-- section title -->
-			<div class="col-xl-6 col-lg-8">
-				<div class="title text-center ">
-					<h2>Our Team</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque quasi tempora obcaecati, quis
-						similique quos.</p>
-					<div class="border"></div>
-				</div>
-			</div>
-			<!-- /section title -->
-		</div>
-		<div class="row">
-			<!-- team member -->
-			<div class="col-lg-4 col-md-6">
-				<div class="team-member text-center">
-					<div class="member-photo">
-						<!-- member photo -->
-						<img loading="lazy" class="img-fluid" src="images/team/member-1.jpg" alt="Meghna">
-						<!-- /member photo -->
 
-						<!-- member social profile -->
-						<div class="mask">
-							<ul class="clearfix">
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-google-outline"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble"></i></a></li>
-							</ul>
-						</div>
-						<!-- /member social profile -->
-					</div>
 
-					<!-- member name & designation -->
-					<div class="member-content">
-						<h3>Michael Jonson</h3>
-						<span>Head Of Marketing</span>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
-					</div>
-					<!-- /member name & designation -->
-
-				</div>
-			</div>
-			<!-- end team member -->
-
-			<!-- team member -->
-			<div class="col-lg-4 col-md-6">
-				<div class="team-member text-center">
-					<div class="member-photo">
-						<!-- member photo -->
-						<img loading="lazy" class="img-fluid" src="images/team/member-2.jpg" alt="Meghna">
-						<!-- /member photo -->
-
-						<!-- member social profile -->
-						<div class="mask">
-							<ul class="clearfix">
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-google-outline"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble"></i></a></li>
-							</ul>
-						</div>
-						<!-- /member social profile -->
-					</div>
-
-					<!-- member name & designation -->
-					<div class="member-content">
-						<h3>Carrick Mollenkamp</h3>
-						<span>Web Developer</span>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
-					</div>
-					<!-- /member name & designation -->
-				</div>
-			</div>
-			<!-- end team member -->
-
-			<!-- team member -->
-			<div class="col-lg-4 col-md-6">
-				<div class="team-member text-center">
-					<div class="member-photo">
-						<!-- member photo -->
-						<img loading="lazy" class="img-fluid" src="images/team/member-3.jpg" alt="Meghna">
-						<!-- /member photo -->
-
-						<!-- member social profile -->
-						<div class="mask">
-							<ul class="clearfix">
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-google-outline"></i></a></li>
-								<li><a href="https://themefisher.com/"><i class="tf-ion-social-dribbble"></i></a></li>
-							</ul>
-						</div>
-						<!-- /member social profile -->
-					</div>
-
-					<!-- member name & designation -->
-					<div class="member-content">
-						<h3>David Gauthier</h3>
-						<span>Head Of Management</span>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p>
-					</div>
-					<!-- /member name & designation -->
-
-				</div>
-			</div>
-			<!-- end team member -->
-		</div> <!-- End row -->
-	</div> <!-- End container -->
-</section> <!-- End section -->
-<!--
-Start Counter Section
-==================================== -->
-<section class="counter-wrapper section-sm">
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-xl-6 col-lg-8 text-center">
-				<div class="title">
-					<h2>Award-Winning Agency</h2>
-					<p>Vestibulum nisl tortor, consectetur quis imperdiet bibendum, laoreet sed arcu. Sed condimentum iaculis ex, in faucibus lorem accumsan non. Donec mattis tincidunt metus. Morbi sed tortor a risus luctus dignissim.</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<!-- first count item -->
-			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
-				<div class="counters-item">
-					<i class="tf-ion-ios-alarm-outline"></i>
-					<div>
-						<span class="counter" data-count="150">0</span>
-					</div>
-					<h3>Happy Clients</h3>
-				</div>
-			</div>
-			<!-- end first count item -->
-
-			<!-- second count item -->
-			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
-				<div class="counters-item">
-					<i class="tf-ion-ios-analytics-outline"></i>
-					<div>
-						<span class="counter" data-count="130">0</span>
-					</div>
-					<h3>Projects completed</h3>
-				</div>
-			</div>
-			<!-- end second count item -->
-
-			<!-- third count item -->
-			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
-				<div class="counters-item">
-					<i class="tf-ion-ios-compose-outline"></i>
-					<div>
-						<span class="counter" data-count="99">0</span>
-					</div>
-					<h3>Positive feedback</h3>
-
-				</div>
-			</div>
-			<!-- end third count item -->
-
-			<!-- fourth count item -->
-			<div class="col-md-3 col-sm-6 col-xs-6 text-center ">
-				<div class="counters-item kill-border">
-					<i class="tf-ion-ios-bolt-outline"></i>
-					<div>
-						<span class="counter" data-count="250">0</span>
-					</div>
-					<h3>Cups of Coffee</h3>
-				</div>
-			</div>
-			<!-- end fourth count item -->
-		</div> <!-- end row -->
-	</div> <!-- end container -->
-</section> <!-- end section -->
 <!--
 Start Call To Action
 ==================================== -->
