--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html>
-
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
+<!-- Push it to the limit -->
 
 <html lang="en">
 <head>
@@ -41,7 +35,6 @@
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
 
-  <link rel="stylesheet"  href="css/script-slider1.less">
 
 
 
@@ -129,7 +122,7 @@ End Fixed Navigation
 ==================================== -->
 
 
-<!-- <div class="hero-slider">   
+<div class="hero-slider">   
 	<div class="slider-item th-fullpage hero-area" style="background-image: url(./images/slider/flatoaltonegromod.jpg);">
 		<div class="container">
 			<div class="row">
@@ -158,25 +151,19 @@ End Fixed Navigation
 			</div>
 		</div>
 	</div>
-</div> -->
-
-<div id="main">
-  <h1>something</h1>
-  <div class="buttons">
-      <button class="next" onclick="go(-1)"></button>
-      <button class="prev" onclick="go(1)"></button>
-  </div>
 </div>
 
 
-<!-- <div class="hero-slider">
+
+
+<div class="hero-slider">
 	<div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/vectorskin1.jpg);">
 		<div class="container">
       <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".8" class="btn btn-vector-skin"
       href="service.html">Mas Informacion</a>
 		</div>
 	</div>
-</div> -->
+</div>
 
 
 
@@ -285,8 +272,7 @@ End Fixed Navigation
 
 <script src="js/tailwind.config.js"></script>
 
-<script src="./script-slider1.js"></script>
-
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js'></script><script  src="./script-slider1.js"></script>
 
 
 </body>
