--- a/duchas.html
+++ b/duchas.html
@@ -67,6 +67,9 @@
 <!--
 Fixed Navigation
 ==================================== -->
+<div class="h-32 scrollbar-thin scrollbar-thumb-blue-700 scrollbar-track-blue-300 overflow-y-scroll scrollbar-thumb-rounded-full scrollbar-track-rounded-full">
+  <div class="h-64 bg-gray-400"></div>
+</div>
 <header class="navigation fixed-top">
   <div class="container">
     <!-- main nav -->
@@ -101,6 +104,15 @@ Fixed Navigation
 		  <li class="nav-item ">
             <a class="nav-link" href="#">Sobre nosotros</a>
           </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="./showroom_prueba/index.html">Showroom 360°</a>
+            
+          </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="post_venta.html">Post Venta</a>
+          </li>
           
           </li>
         </ul>
@@ -109,6 +121,8 @@ Fixed Navigation
     <!-- /main nav -->
   </div>
 </header>
+
+
 <!--
 End Fixed Navigation
 ==================================== -->
@@ -158,9 +172,9 @@ End Fixed Navigation
 					<button type="button" data-filter="all">Todos</button>
 					<button type="button" data-filter="rectos">rectos</button>
 					<button type="button" data-filter="curvos">curvos</button>
-					<button type="button" data-filter="altos">altos</button>
-					<button type="button" data-filter="bajos">bajos</button>
-					<button type="button" data-filter="temproizado">Temporizado</button>
+					<button type="button" data-filter="$">altos</button>
+					<button type="button" data-filter="#">bajos</button>
+					<button type="button" data-filter="#">Temporizado</button>
 				</div>
 		
 		<div class="row">
