--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ End Fixed Navigation
     <!-- Slides -->
     <div class="fs-slides">
       <div class="fs-slide">
-        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/JOCKEY%20BLANCO.jpg?alt=media&token=da8d96a0-daa6-4533-a291-5dba3bcb51c6);"></div>
+        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/jockeyskin.jpg?alt=media&token=1bea148d-4714-4e59-814d-9726ca75ca16);"></div>
         <!-- You can add content to slides (class names are not bound to CSS Fadeshow) -->
         <div class="slide-content">
           <h1></h1>
@@ -156,10 +156,10 @@ End Fixed Navigation
         <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/flatoaltonegromod.jpg?alt=media&token=b42c08c0-d90b-4706-989e-3415cd753094);"></div>
       </div>
       <div class="fs-slide">
-        <div class="fs-slide-bg" style="background-image: url(https://images.unsplash.com/photo-1422393462206-207b0fbd8d6b?crop=entropy&fit=crop&fm=jpg&h=1300&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=2500);"></div>
+        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/JOCKEY%20BLANCO.jpg?alt=media&token=da8d96a0-daa6-4533-a291-5dba3bcb51c6);"></div>
       </div>
       <div class="fs-slide">
-        <div class="fs-slide-bg" style="background-image: url(https://images.unsplash.com/photo-1432117068802-b224427256a5?crop=entropy&fit=crop&fm=jpg&h=1300&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=2500);"></div>
+        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/Flat%20alto.jpg?alt=media&token=888ea8a1-516e-452b-91b2-71dadfbdaca1);"></div>
       </div>
     </div>
 
