--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@ Fixed Navigation
           <li class="nav-item ">
             <a class="nav-link" href="post_venta.html">Post Venta</a>
           </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="./urbanui-login-template-free-1-7433a5e503a6/index.html">Intra-net</a>
+          </li>
           
           </li>
         </ul>
@@ -150,7 +154,7 @@ End Fixed Navigation
         </div>
       </div>
       <div class="fs-slide">
-        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/blockplane.jpg?alt=media&token=1d3ceaf8-6411-41be-930d-ef62f5b201e3);"></div>
+        <div class="fs-slide-bg" style="background-image: url(./images/slider/blockplane2.jpg);"></div>
       </div>
       <div class="fs-slide">
         <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/flatoaltonegromod.jpg?alt=media&token=b42c08c0-d90b-4706-989e-3415cd753094);"></div>
@@ -209,18 +213,27 @@ End Fixed Navigation
 </div>
 
 
+<div class="banner_3">
+</div> <!--No tocar, hace de separador -->
+<div class="banner_3">
+ <div class="banner_description"></div>
+</div>
+<div class="banner_4">
+</div>
 
 
 
 
 
 
-<div class="hero-area">
+
+
+<!-- <div class="hero-area">
   <div class="paralelismo">
     <div class="image1"></div>
     <div class="image2"></div>
   </div>
-</div>
+</div> -->
 
 
 
