--- a/contact.html
+++ b/contact.html
@@ -104,12 +104,16 @@ Fixed Navigation
 			</li>
   
 			<li class="nav-item ">
-			  <a class="nav-link" href="https://virtualtour.dev/vr/gessi/virtual_tour/">Showroom 360°</a>
+			  <a class="nav-link" href="./showroom_prueba/index.html">Showroom 360°</a>
 			  
 			</li>
   
 			<li class="nav-item ">
-			  <a class="nav-link" href="https://virtualtour.dev/vr/gessi/virtual_tour/">Post Venta</a>
+			  <a class="nav-link" href="post_venta.html">Post Venta</a>
+			</li>
+  
+			<li class="nav-item ">
+			  <a class="nav-link" href="./urbanui-login-template-free-1-7433a5e503a6/index.html">Intra-net</a>
 			</li>
 			
 			</li>
@@ -119,6 +123,11 @@ Fixed Navigation
 	  <!-- /main nav -->
 	</div>
   </header>
+  
+  
+  <!--
+  End Fixed Navigation
+  ==================================== -->
   
   
   
