--- a/duchas.html
+++ b/duchas.html
@@ -113,6 +113,10 @@ Fixed Navigation
           <li class="nav-item ">
             <a class="nav-link" href="post_venta.html">Post Venta</a>
           </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="./urbanui-login-template-free-1-7433a5e503a6/index.html">Intra-net</a>
+          </li>
           
           </li>
         </ul>
