--- a/columnas.html
+++ b/columnas.html
@@ -67,6 +67,9 @@
 <!--
 Fixed Navigation
 ==================================== -->
+<div class="h-32 scrollbar-thin scrollbar-thumb-blue-700 scrollbar-track-blue-300 overflow-y-scroll scrollbar-thumb-rounded-full scrollbar-track-rounded-full">
+  <div class="h-64 bg-gray-400"></div>
+</div>
 <header class="navigation fixed-top">
   <div class="container">
     <!-- main nav -->
@@ -101,6 +104,19 @@ Fixed Navigation
 		  <li class="nav-item ">
             <a class="nav-link" href="#">Sobre nosotros</a>
           </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="./showroom_prueba/index.html">Showroom 360°</a>
+            
+          </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="post_venta.html">Post Venta</a>
+          </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="./urbanui-login-template-free-1-7433a5e503a6/index.html">Intra-net</a>
+          </li>
           
           </li>
         </ul>
@@ -109,6 +125,8 @@ Fixed Navigation
     <!-- /main nav -->
   </div>
 </header>
+
+
 <!--
 End Fixed Navigation
 ==================================== -->
