--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ End Fixed Navigation
         </div>
       </div>
       <div class="fs-slide">
-        <div class="fs-slide-bg" style="background-image: url(./images/slider/blockplane2.jpg);"></div>
+        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/sliders%2FBLOCK%20UP.jpg?alt=media&token=e2e150e5-db66-4b77-9d0b-ad5627bcb46b);"></div>
       </div>
       <div class="fs-slide">
         <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/flatoaltonegromod.jpg?alt=media&token=b42c08c0-d90b-4706-989e-3415cd753094);"></div>
@@ -163,7 +163,10 @@ End Fixed Navigation
         <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/JOCKEY%20BLANCO.jpg?alt=media&token=da8d96a0-daa6-4533-a291-5dba3bcb51c6);"></div>
       </div>
       <div class="fs-slide">
-        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/Flat%20alto.jpg?alt=media&token=888ea8a1-516e-452b-91b2-71dadfbdaca1);"></div>
+        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/sliders%2FRAPTOR.jpg?alt=media&token=bffc863d-033d-4071-a961-0b65a8ec0009);"></div>
+      </div>
+      <div class="fs-slide">
+        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/sliders%2FRAPTOR.jpg?alt=media&token=bffc863d-033d-4071-a961-0b65a8ec0009);"></div>
       </div>
     </div>
 
@@ -174,6 +177,8 @@ End Fixed Navigation
       <label class="fs-quick-btn" for="fs-slide-3"></label>
       <label class="fs-quick-btn" for="fs-slide-4"></label>
       <label class="fs-quick-btn" for="fs-slide-5"></label>
+      <label class="fs-quick-btn" for="fs-slide-6"></label>
+
     </div>
 
     <!-- Prev Navigation -->
@@ -183,6 +188,7 @@ End Fixed Navigation
       <label class="fs-prev-btn" for="fs-slide-3"></label>
       <label class="fs-prev-btn" for="fs-slide-4"></label>
       <label class="fs-prev-btn" for="fs-slide-5"></label>
+
     </div>
 
     <!-- Next Navigation -->
@@ -192,6 +198,7 @@ End Fixed Navigation
       <label class="fs-next-btn" for="fs-slide-3"></label>
       <label class="fs-next-btn" for="fs-slide-4"></label>
       <label class="fs-next-btn" for="fs-slide-5"></label>
+
     </div>
 
     <!-- Slide Counter -->
