--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ End Fixed Navigation
     <!-- Slides -->
     <div class="fs-slides">
       <div class="fs-slide">
-        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/jockeyskin.jpg?alt=media&token=1bea148d-4714-4e59-814d-9726ca75ca16);"></div>
+        <div class="fs-slide-bg" style="background-image:  url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/COLORES.jpg?alt=media&token=e4f7104b-d0f7-45f9-a598-71513a8850bb);"></div>
         <!-- You can add content to slides (class names are not bound to CSS Fadeshow) -->
         <div class="slide-content">
           <h1></h1>
@@ -157,7 +157,7 @@ End Fixed Navigation
         <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/sliders%2FBLOCK%20UP.jpg?alt=media&token=e2e150e5-db66-4b77-9d0b-ad5627bcb46b);"></div>
       </div>
       <div class="fs-slide">
-        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/flatoaltonegromod.jpg?alt=media&token=b42c08c0-d90b-4706-989e-3415cd753094);"></div>
+        <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/ONE%20BLOCK.jpg?alt=media&token=f0b90747-ea36-40ac-8b29-b65745e6fa33);"></div>
       </div>
       <div class="fs-slide">
         <div class="fs-slide-bg" style="background-image: url(https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/JOCKEY%20BLANCO.jpg?alt=media&token=da8d96a0-daa6-4533-a291-5dba3bcb51c6);"></div>
@@ -245,8 +245,7 @@ End Fixed Navigation
 <div class="hero-slider">
 	<div class="slider-item th-fullpage hero-area" style="background-image: url(images/slider/blockplane.jpg);">
 		<div class="container">
-      <a data-duration-in=".3" data-animation-in="fadeInUp" data-delay-out="1m  " class="btn btn-main"
-      href="service.html">Mas Informacion</a>
+
 		</div>
 	</div>
 </div>
