--- a/contact.html
+++ b/contact.html
@@ -227,7 +227,7 @@ Fixed Navigation
  <!--================================
 =            Google Map            =
 =================================-->
-<div class="google-map">
+<div class="row">
 	<!-- <div id="map_canvas" class="map_canvas" data-latitude="-34.4628089" data-longitude="-58.5499184,15" data-marker="images/marker.png" data-marker-name="Hidromet"></div> -->
   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13158.319851184768!2d-58.5499184!3d-34.4628089!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3dbe0ad711fd7306!2sHIDROMET!5e0!3m2!1ses!2sar!4v1667547132541!5m2!1ses!2sar" width="1900" height="600" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
