--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <link rel="stylesheet" href="./slider/demo/slider.css">
 
-  <link rel="stylesheet" href="./slider/css/css-fadeshow.min.css"
+  <link rel="stylesheet" href="./slider/css/css-fadeshow.min.css">
 
   
 
