--- a/productos/inicio/block up/block_up.html
+++ b/productos/inicio/block up/block_up.html
@@ -64,7 +64,7 @@ Fixed Navigation
     <!-- main nav -->
     <nav class="navbar navbar-expand-lg navbar-light px-0">
       <!-- logo -->
-      <a class="navbar-brand logo" href="HIDROME_FINAL-MAIN-NOTEBOOK-JUAN/index.html">
+      <a class="navbar-brand logo" href="/Hidrome_final-main-notebook-juan/productos/inicio/one%20block/index.html">
         <img loading="lazy" class="logo-default" src="https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/logohidromet.png?alt=media&token=144b8d11-4122-434e-923f-ab9f767511d6" alt="logo" />
         <img loading="lazy" class="logo-white" src="https://firebasestorage.googleapis.com/v0/b/hidromet-77fd6.appspot.com/o/logo-white.png?alt=media&token=c14c12a9-c86e-4ff2-8469-cfeac76ec1f3" alt="logo" />
       </a>
