--- a/productos/inicio/block plane/block_plane.html
+++ b/productos/inicio/block plane/block_plane.html
@@ -266,7 +266,10 @@ End Fixed Navigation
                 <a href="https://hidrometrepuestos.com/lineas/griferia/repuesto/3401CRCR/">Repuestos</a>
               </li>
               <li>
-                <a href="#">Tabla de presiones</a>
+                <a href="#">Especificaciones</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=FU8_Xb9rDd4&ab_channel=EasyArgentina">Instalacion de Producto</a>
               </li>
               <!-- <li>
                 <a href="blog.html">Advanced Analytics</a>
