--- a/productos/inicio/discovery/discovery.html
+++ b/productos/inicio/discovery/discovery.html
@@ -256,6 +256,11 @@ End Fixed Navigation
               <li>
                 <a href="#">Imprimir manual</a>
               </li>
+              <div>
+                <a rel="ar" href="productos/">
+                    <img src="/assets/models/my-model-thumbnail.jpg">
+                </a>
+            </div>
               <li>
                 <a href="#">Manual de Linea</a>
               </li>
